Week1Assignment/y.output
Grammar

    0 $accept: CFILE $end

    1 CFILE: STATEMENTS

    2 PARAMETER: TYPE NAME

    3 EXTERN_FUNC: EXTERN TYPE READ '(' ')' ';'
    4            | EXTERN TYPE PRINT '(' TYPE ')' ';'

    5 STATEMENT: EXTERN_FUNC
    6          | FUNCTION
    7          | ASSIGNMENT_STATEMENT
    8          | IF_STATEMENT
    9          | PRINT_STATEMENT
   10          | READ_STATEMENT
   11          | WHILE_STATEMENT
   12          | RETURN_STATEMENT

   13 FUNCTION: PARAMETER '(' PARAMETER ')' '{' STATEMENTS '}' ';'

   14 STATEMENTS: STATEMENTS STATEMENT
   15           | STATEMENT

   16 ASSIGNMENT_STATEMENT: PARAMETER ';'
   17                     | NAME '=' EXPRESSION ';'
   18                     | NAME '=' NAME ';'
   19                     | NAME '=' NUMBER ';'

   20 EXPRESSION: NAME ARITH_OP NAME
   21           | NAME ARITH_OP NUMBER
   22           | NUMBER ARITH_OP NAME
   23           | NUMBER ARITH_OP NUMBER

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION ')' '{' STATEMENTS '}'

   26 CONDITION: NAME COND_OP NAME
   27          | NAME COND_OP NUMBER
   28          | NUMBER COND_OP NAME
   29          | NUMBER COND_OP NUMBER

   30 PRINT_STATEMENT: PRINT '(' NAME ')' ';'
   31                | PRINT '(' NUMBER ')' ';'
   32                | PRINT '(' EXPRESSION ')' ';'

   33 READ_STATEMENT: READ '(' ')' ';'

   34 WHILE_STATEMENT: WHILE '(' CONDITION ')' '{' STATEMENTS '}'

   35 RETURN_STATEMENT: RETURN EXPRESSION ';'
   36                 | RETURN ';'
   37                 | RETURN '(' EXPRESSION ')' ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 4 13 24 25 30 31 32 33 34 37
    ')' (41) 3 4 13 24 25 30 31 32 33 34 37
    ';' (59) 3 4 13 16 17 18 19 30 31 32 33 35 36 37
    '=' (61) 17 18 19
    '{' (123) 13 24 25 34
    '}' (125) 13 24 25 34
    error (256)
    EXTERN (258) 3 4
    TYPE (259) 2 3 4
    RETURN (260) 35 36 37
    IF (261) 24 25
    ELSE (262) 24
    WHILE (263) 34
    PRINT (264) 4 30 31 32
    NAME (265) 2 17 18 19 20 21 22 26 27 28 30
    NUMBER (266) 19 21 22 23 27 28 29 31
    COND_OP (267) 26 27 28 29
    ARITH_OP (268) 20 21 22 23
    READ (269) 3 33


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    CFILE (22)
        on left: 1
        on right: 0
    PARAMETER (23)
        on left: 2
        on right: 13 16
    EXTERN_FUNC (24)
        on left: 3 4
        on right: 5
    STATEMENT (25)
        on left: 5 6 7 8 9 10 11 12
        on right: 14 15
    FUNCTION (26)
        on left: 13
        on right: 6
    STATEMENTS (27)
        on left: 14 15
        on right: 1 13 14 24 25 34
    ASSIGNMENT_STATEMENT (28)
        on left: 16 17 18 19
        on right: 7
    EXPRESSION (29)
        on left: 20 21 22 23
        on right: 17 32 35 37
    IF_STATEMENT (30)
        on left: 24 25
        on right: 8
    CONDITION (31)
        on left: 26 27 28 29
        on right: 24 25 34
    PRINT_STATEMENT (32)
        on left: 30 31 32
        on right: 9
    READ_STATEMENT (33)
        on left: 33
        on right: 10
    WHILE_STATEMENT (34)
        on left: 34
        on right: 11
    RETURN_STATEMENT (35)
        on left: 35 36 37
        on right: 12


State 0

    0 $accept: • CFILE $end

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    CFILE                 go to state 9
    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 12
    FUNCTION              go to state 13
    STATEMENTS            go to state 14
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 1

    3 EXTERN_FUNC: EXTERN • TYPE READ '(' ')' ';'
    4            | EXTERN • TYPE PRINT '(' TYPE ')' ';'

    TYPE  shift, and go to state 21


State 2

    2 PARAMETER: TYPE • NAME

    NAME  shift, and go to state 22


State 3

   35 RETURN_STATEMENT: RETURN • EXPRESSION ';'
   36                 | RETURN • ';'
   37                 | RETURN • '(' EXPRESSION ')' ';'

    NAME    shift, and go to state 23
    NUMBER  shift, and go to state 24
    '('     shift, and go to state 25
    ';'     shift, and go to state 26

    EXPRESSION  go to state 27


State 4

   24 IF_STATEMENT: IF • '(' CONDITION ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF • '(' CONDITION ')' '{' STATEMENTS '}'

    '('  shift, and go to state 28


State 5

   34 WHILE_STATEMENT: WHILE • '(' CONDITION ')' '{' STATEMENTS '}'

    '('  shift, and go to state 29


State 6

   30 PRINT_STATEMENT: PRINT • '(' NAME ')' ';'
   31                | PRINT • '(' NUMBER ')' ';'
   32                | PRINT • '(' EXPRESSION ')' ';'

    '('  shift, and go to state 30


State 7

   17 ASSIGNMENT_STATEMENT: NAME • '=' EXPRESSION ';'
   18                     | NAME • '=' NAME ';'
   19                     | NAME • '=' NUMBER ';'

    '='  shift, and go to state 31


State 8

   33 READ_STATEMENT: READ • '(' ')' ';'

    '('  shift, and go to state 32


State 9

    0 $accept: CFILE • $end

    $end  shift, and go to state 33


State 10

   13 FUNCTION: PARAMETER • '(' PARAMETER ')' '{' STATEMENTS '}' ';'
   16 ASSIGNMENT_STATEMENT: PARAMETER • ';'

    '('  shift, and go to state 34
    ';'  shift, and go to state 35


State 11

    5 STATEMENT: EXTERN_FUNC •

    $default  reduce using rule 5 (STATEMENT)


State 12

   15 STATEMENTS: STATEMENT •

    $default  reduce using rule 15 (STATEMENTS)


State 13

    6 STATEMENT: FUNCTION •

    $default  reduce using rule 6 (STATEMENT)


State 14

    1 CFILE: STATEMENTS •
   14 STATEMENTS: STATEMENTS • STATEMENT

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    $default  reduce using rule 1 (CFILE)

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 36
    FUNCTION              go to state 13
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 15

    7 STATEMENT: ASSIGNMENT_STATEMENT •

    $default  reduce using rule 7 (STATEMENT)


State 16

    8 STATEMENT: IF_STATEMENT •

    $default  reduce using rule 8 (STATEMENT)


State 17

    9 STATEMENT: PRINT_STATEMENT •

    $default  reduce using rule 9 (STATEMENT)


State 18

   10 STATEMENT: READ_STATEMENT •

    $default  reduce using rule 10 (STATEMENT)


State 19

   11 STATEMENT: WHILE_STATEMENT •

    $default  reduce using rule 11 (STATEMENT)


State 20

   12 STATEMENT: RETURN_STATEMENT •

    $default  reduce using rule 12 (STATEMENT)


State 21

    3 EXTERN_FUNC: EXTERN TYPE • READ '(' ')' ';'
    4            | EXTERN TYPE • PRINT '(' TYPE ')' ';'

    PRINT  shift, and go to state 37
    READ   shift, and go to state 38


State 22

    2 PARAMETER: TYPE NAME •

    $default  reduce using rule 2 (PARAMETER)


State 23

   20 EXPRESSION: NAME • ARITH_OP NAME
   21           | NAME • ARITH_OP NUMBER

    ARITH_OP  shift, and go to state 39


State 24

   22 EXPRESSION: NUMBER • ARITH_OP NAME
   23           | NUMBER • ARITH_OP NUMBER

    ARITH_OP  shift, and go to state 40


State 25

   37 RETURN_STATEMENT: RETURN '(' • EXPRESSION ')' ';'

    NAME    shift, and go to state 23
    NUMBER  shift, and go to state 24

    EXPRESSION  go to state 41


State 26

   36 RETURN_STATEMENT: RETURN ';' •

    $default  reduce using rule 36 (RETURN_STATEMENT)


State 27

   35 RETURN_STATEMENT: RETURN EXPRESSION • ';'

    ';'  shift, and go to state 42


State 28

   24 IF_STATEMENT: IF '(' • CONDITION ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' • CONDITION ')' '{' STATEMENTS '}'

    NAME    shift, and go to state 43
    NUMBER  shift, and go to state 44

    CONDITION  go to state 45


State 29

   34 WHILE_STATEMENT: WHILE '(' • CONDITION ')' '{' STATEMENTS '}'

    NAME    shift, and go to state 43
    NUMBER  shift, and go to state 44

    CONDITION  go to state 46


State 30

   30 PRINT_STATEMENT: PRINT '(' • NAME ')' ';'
   31                | PRINT '(' • NUMBER ')' ';'
   32                | PRINT '(' • EXPRESSION ')' ';'

    NAME    shift, and go to state 47
    NUMBER  shift, and go to state 48

    EXPRESSION  go to state 49


State 31

   17 ASSIGNMENT_STATEMENT: NAME '=' • EXPRESSION ';'
   18                     | NAME '=' • NAME ';'
   19                     | NAME '=' • NUMBER ';'

    NAME    shift, and go to state 50
    NUMBER  shift, and go to state 51

    EXPRESSION  go to state 52


State 32

   33 READ_STATEMENT: READ '(' • ')' ';'

    ')'  shift, and go to state 53


State 33

    0 $accept: CFILE $end •

    $default  accept


State 34

   13 FUNCTION: PARAMETER '(' • PARAMETER ')' '{' STATEMENTS '}' ';'

    TYPE  shift, and go to state 2

    PARAMETER  go to state 54


State 35

   16 ASSIGNMENT_STATEMENT: PARAMETER ';' •

    $default  reduce using rule 16 (ASSIGNMENT_STATEMENT)


State 36

   14 STATEMENTS: STATEMENTS STATEMENT •

    $default  reduce using rule 14 (STATEMENTS)


State 37

    4 EXTERN_FUNC: EXTERN TYPE PRINT • '(' TYPE ')' ';'

    '('  shift, and go to state 55


State 38

    3 EXTERN_FUNC: EXTERN TYPE READ • '(' ')' ';'

    '('  shift, and go to state 56


State 39

   20 EXPRESSION: NAME ARITH_OP • NAME
   21           | NAME ARITH_OP • NUMBER

    NAME    shift, and go to state 57
    NUMBER  shift, and go to state 58


State 40

   22 EXPRESSION: NUMBER ARITH_OP • NAME
   23           | NUMBER ARITH_OP • NUMBER

    NAME    shift, and go to state 59
    NUMBER  shift, and go to state 60


State 41

   37 RETURN_STATEMENT: RETURN '(' EXPRESSION • ')' ';'

    ')'  shift, and go to state 61


State 42

   35 RETURN_STATEMENT: RETURN EXPRESSION ';' •

    $default  reduce using rule 35 (RETURN_STATEMENT)


State 43

   26 CONDITION: NAME • COND_OP NAME
   27          | NAME • COND_OP NUMBER

    COND_OP  shift, and go to state 62


State 44

   28 CONDITION: NUMBER • COND_OP NAME
   29          | NUMBER • COND_OP NUMBER

    COND_OP  shift, and go to state 63


State 45

   24 IF_STATEMENT: IF '(' CONDITION • ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION • ')' '{' STATEMENTS '}'

    ')'  shift, and go to state 64


State 46

   34 WHILE_STATEMENT: WHILE '(' CONDITION • ')' '{' STATEMENTS '}'

    ')'  shift, and go to state 65


State 47

   20 EXPRESSION: NAME • ARITH_OP NAME
   21           | NAME • ARITH_OP NUMBER
   30 PRINT_STATEMENT: PRINT '(' NAME • ')' ';'

    ARITH_OP  shift, and go to state 39
    ')'       shift, and go to state 66


State 48

   22 EXPRESSION: NUMBER • ARITH_OP NAME
   23           | NUMBER • ARITH_OP NUMBER
   31 PRINT_STATEMENT: PRINT '(' NUMBER • ')' ';'

    ARITH_OP  shift, and go to state 40
    ')'       shift, and go to state 67


State 49

   32 PRINT_STATEMENT: PRINT '(' EXPRESSION • ')' ';'

    ')'  shift, and go to state 68


State 50

   18 ASSIGNMENT_STATEMENT: NAME '=' NAME • ';'
   20 EXPRESSION: NAME • ARITH_OP NAME
   21           | NAME • ARITH_OP NUMBER

    ARITH_OP  shift, and go to state 39
    ';'       shift, and go to state 69


State 51

   19 ASSIGNMENT_STATEMENT: NAME '=' NUMBER • ';'
   22 EXPRESSION: NUMBER • ARITH_OP NAME
   23           | NUMBER • ARITH_OP NUMBER

    ARITH_OP  shift, and go to state 40
    ';'       shift, and go to state 70


State 52

   17 ASSIGNMENT_STATEMENT: NAME '=' EXPRESSION • ';'

    ';'  shift, and go to state 71


State 53

   33 READ_STATEMENT: READ '(' ')' • ';'

    ';'  shift, and go to state 72


State 54

   13 FUNCTION: PARAMETER '(' PARAMETER • ')' '{' STATEMENTS '}' ';'

    ')'  shift, and go to state 73


State 55

    4 EXTERN_FUNC: EXTERN TYPE PRINT '(' • TYPE ')' ';'

    TYPE  shift, and go to state 74


State 56

    3 EXTERN_FUNC: EXTERN TYPE READ '(' • ')' ';'

    ')'  shift, and go to state 75


State 57

   20 EXPRESSION: NAME ARITH_OP NAME •

    $default  reduce using rule 20 (EXPRESSION)


State 58

   21 EXPRESSION: NAME ARITH_OP NUMBER •

    $default  reduce using rule 21 (EXPRESSION)


State 59

   22 EXPRESSION: NUMBER ARITH_OP NAME •

    $default  reduce using rule 22 (EXPRESSION)


State 60

   23 EXPRESSION: NUMBER ARITH_OP NUMBER •

    $default  reduce using rule 23 (EXPRESSION)


State 61

   37 RETURN_STATEMENT: RETURN '(' EXPRESSION ')' • ';'

    ';'  shift, and go to state 76


State 62

   26 CONDITION: NAME COND_OP • NAME
   27          | NAME COND_OP • NUMBER

    NAME    shift, and go to state 77
    NUMBER  shift, and go to state 78


State 63

   28 CONDITION: NUMBER COND_OP • NAME
   29          | NUMBER COND_OP • NUMBER

    NAME    shift, and go to state 79
    NUMBER  shift, and go to state 80


State 64

   24 IF_STATEMENT: IF '(' CONDITION ')' • '{' STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION ')' • '{' STATEMENTS '}'

    '{'  shift, and go to state 81


State 65

   34 WHILE_STATEMENT: WHILE '(' CONDITION ')' • '{' STATEMENTS '}'

    '{'  shift, and go to state 82


State 66

   30 PRINT_STATEMENT: PRINT '(' NAME ')' • ';'

    ';'  shift, and go to state 83


State 67

   31 PRINT_STATEMENT: PRINT '(' NUMBER ')' • ';'

    ';'  shift, and go to state 84


State 68

   32 PRINT_STATEMENT: PRINT '(' EXPRESSION ')' • ';'

    ';'  shift, and go to state 85


State 69

   18 ASSIGNMENT_STATEMENT: NAME '=' NAME ';' •

    $default  reduce using rule 18 (ASSIGNMENT_STATEMENT)


State 70

   19 ASSIGNMENT_STATEMENT: NAME '=' NUMBER ';' •

    $default  reduce using rule 19 (ASSIGNMENT_STATEMENT)


State 71

   17 ASSIGNMENT_STATEMENT: NAME '=' EXPRESSION ';' •

    $default  reduce using rule 17 (ASSIGNMENT_STATEMENT)


State 72

   33 READ_STATEMENT: READ '(' ')' ';' •

    $default  reduce using rule 33 (READ_STATEMENT)


State 73

   13 FUNCTION: PARAMETER '(' PARAMETER ')' • '{' STATEMENTS '}' ';'

    '{'  shift, and go to state 86


State 74

    4 EXTERN_FUNC: EXTERN TYPE PRINT '(' TYPE • ')' ';'

    ')'  shift, and go to state 87


State 75

    3 EXTERN_FUNC: EXTERN TYPE READ '(' ')' • ';'

    ';'  shift, and go to state 88


State 76

   37 RETURN_STATEMENT: RETURN '(' EXPRESSION ')' ';' •

    $default  reduce using rule 37 (RETURN_STATEMENT)


State 77

   26 CONDITION: NAME COND_OP NAME •

    $default  reduce using rule 26 (CONDITION)


State 78

   27 CONDITION: NAME COND_OP NUMBER •

    $default  reduce using rule 27 (CONDITION)


State 79

   28 CONDITION: NUMBER COND_OP NAME •

    $default  reduce using rule 28 (CONDITION)


State 80

   29 CONDITION: NUMBER COND_OP NUMBER •

    $default  reduce using rule 29 (CONDITION)


State 81

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' • STATEMENTS '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION ')' '{' • STATEMENTS '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 12
    FUNCTION              go to state 13
    STATEMENTS            go to state 89
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 82

   34 WHILE_STATEMENT: WHILE '(' CONDITION ')' '{' • STATEMENTS '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 12
    FUNCTION              go to state 13
    STATEMENTS            go to state 90
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 83

   30 PRINT_STATEMENT: PRINT '(' NAME ')' ';' •

    $default  reduce using rule 30 (PRINT_STATEMENT)


State 84

   31 PRINT_STATEMENT: PRINT '(' NUMBER ')' ';' •

    $default  reduce using rule 31 (PRINT_STATEMENT)


State 85

   32 PRINT_STATEMENT: PRINT '(' EXPRESSION ')' ';' •

    $default  reduce using rule 32 (PRINT_STATEMENT)


State 86

   13 FUNCTION: PARAMETER '(' PARAMETER ')' '{' • STATEMENTS '}' ';'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 12
    FUNCTION              go to state 13
    STATEMENTS            go to state 91
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 87

    4 EXTERN_FUNC: EXTERN TYPE PRINT '(' TYPE ')' • ';'

    ';'  shift, and go to state 92


State 88

    3 EXTERN_FUNC: EXTERN TYPE READ '(' ')' ';' •

    $default  reduce using rule 3 (EXTERN_FUNC)


State 89

   14 STATEMENTS: STATEMENTS • STATEMENT
   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS • '}' ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION ')' '{' STATEMENTS • '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8
    '}'     shift, and go to state 93

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 36
    FUNCTION              go to state 13
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 90

   14 STATEMENTS: STATEMENTS • STATEMENT
   34 WHILE_STATEMENT: WHILE '(' CONDITION ')' '{' STATEMENTS • '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8
    '}'     shift, and go to state 94

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 36
    FUNCTION              go to state 13
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 91

   13 FUNCTION: PARAMETER '(' PARAMETER ')' '{' STATEMENTS • '}' ';'
   14 STATEMENTS: STATEMENTS • STATEMENT

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8
    '}'     shift, and go to state 95

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 36
    FUNCTION              go to state 13
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 92

    4 EXTERN_FUNC: EXTERN TYPE PRINT '(' TYPE ')' ';' •

    $default  reduce using rule 4 (EXTERN_FUNC)


State 93

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' • ELSE '{' STATEMENTS '}'
   25             | IF '(' CONDITION ')' '{' STATEMENTS '}' •

    ELSE  shift, and go to state 96

    $default  reduce using rule 25 (IF_STATEMENT)


State 94

   34 WHILE_STATEMENT: WHILE '(' CONDITION ')' '{' STATEMENTS '}' •

    $default  reduce using rule 34 (WHILE_STATEMENT)


State 95

   13 FUNCTION: PARAMETER '(' PARAMETER ')' '{' STATEMENTS '}' • ';'

    ';'  shift, and go to state 97


State 96

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' ELSE • '{' STATEMENTS '}'

    '{'  shift, and go to state 98


State 97

   13 FUNCTION: PARAMETER '(' PARAMETER ')' '{' STATEMENTS '}' ';' •

    $default  reduce using rule 13 (FUNCTION)


State 98

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' ELSE '{' • STATEMENTS '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 12
    FUNCTION              go to state 13
    STATEMENTS            go to state 99
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 99

   14 STATEMENTS: STATEMENTS • STATEMENT
   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS • '}'

    EXTERN  shift, and go to state 1
    TYPE    shift, and go to state 2
    RETURN  shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    NAME    shift, and go to state 7
    READ    shift, and go to state 8
    '}'     shift, and go to state 100

    PARAMETER             go to state 10
    EXTERN_FUNC           go to state 11
    STATEMENT             go to state 36
    FUNCTION              go to state 13
    ASSIGNMENT_STATEMENT  go to state 15
    IF_STATEMENT          go to state 16
    PRINT_STATEMENT       go to state 17
    READ_STATEMENT        go to state 18
    WHILE_STATEMENT       go to state 19
    RETURN_STATEMENT      go to state 20


State 100

   24 IF_STATEMENT: IF '(' CONDITION ')' '{' STATEMENTS '}' ELSE '{' STATEMENTS '}' •

    $default  reduce using rule 24 (IF_STATEMENT)
